[package]
name = "pinocchio_flash_loan"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.9.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"

[lib]
crate-type = ["lib", "cdylib"]


[dev-dependencies]
solana-sdk = "2.2.1"
mollusk-svm = "0.4.0"
mollusk-svm-bencher = "0.4.0"

[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]

[[test]]
name = "flash_loan"
